Boilerplate and icons

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
     <!-- Favicons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
     <link rel="mask-icon" href="/icons/maskable_icon.png" color="#2b3e50">
 
     <!-- Manifest PWA -->
     <link rel="manifest" href="/manifest.json">
 
     <!-- Apple splash screen support (facoltativo ma utile per installazione PWA) -->
-    <link rel="apple-touch-startup-image" href="/icons/android-chrome-512x512.png">
+    <link rel="apple-touch-startup-image" href="/icons/maskable_icon_x512.png">
 
     <!-- Social media preview (OpenGraph / Facebook) -->
     <meta property="og:title" content="OK Colf Express">
