Scaffold Empty Application

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Charset & viewport -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Charset & viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- PWA theme & color -->
     <meta name="theme-color" content="#2b3e50">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <!--meta name="apple-mobile-web-app-capable" content="yes"-->
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
     <!-- Favicons -->
@@ -38,37 +40,39 @@
     <meta name="twitter:image" content="/icons/share.jpg">
 
 
-  <title>OK Colf Express</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="manifest" href="manifest.json">
+    <title>OK Colf Express</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
-  <h1>OK Colf Express</h1>
-  <div id="status"></div>
-  <div id="workers-list"></div>
+    <h1>OK Colf Express</h1>
+    <div id="status"></div>
+    <div id="workers-list"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/dexie@3.2.4/dist/dexie.min.js"></script>
-  <script src="js/conf.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/db.js"></script>
-  <script src="js/log.js"></script>
-  <script src="js/sync.js"></script>
-  <script src="js/app.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js')
-        .then(() => console.log('Service Worker registrato'))
-        .catch(err => console.error('Errore registrazione SW', err));
-    }
+    <script src="https://cdn.jsdelivr.net/npm/dexie@3.2.4/dist/dexie.min.js"></script>
+    <script src="js/conf.js"></script>
+    <script src="js/db.js"></script>
+    <script src="js/log.js"></script>
+    <script src="js/sync.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/app.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+                .then(() => console.log('Service Worker registrato'))
+                .catch(err => console.error('Errore registrazione SW', err));
+        }
 
-    function updateStatus() {
-      document.getElementById('status').textContent = navigator.onLine
-        ? 'Online'
-        : 'Offline';
-    }
-    window.addEventListener('online', () => { updateStatus(); triggerSync(); });
-    window.addEventListener('offline', updateStatus);
-    updateStatus();
-  </script>
+        function updateStatus() {
+            document.getElementById('status').textContent = navigator.onLine
+                ? 'Online'
+                : 'Offline';
+        }
+        window.addEventListener('online', () => { updateStatus(); triggerSync(); });
+        window.addEventListener('offline', updateStatus);
+        updateStatus();
+    </script>
 </body>
+
 </html>
