--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
                         <!-- BOTTOM NAV -->
                         <ons-tabbar id="myTabBar" position="bottom">
                             <ons-tab label="Home" icon="ion-ios-home" page="home-html" active></ons-tab>
-                            <ons-tab hidden label="Datore" page="/html/datore.html"></ons-tab>
-                            <ons-tab hidden label="Collaboratore" page="/html/collaboratore.html"></ons-tab>
-                            <ons-tab label="Ore" icon="ion-ios-calendar" page="/html/ore.html"></ons-tab>
-                            <ons-tab hidden label="Calendario" page="/html/calendario.html"></ons-tab>
+                            <ons-tab hidden label="Datore" page="html/datore.html"></ons-tab>
+                            <ons-tab hidden label="Collaboratore" page="html/collaboratore.html"></ons-tab>
+                            <ons-tab label="Ore" icon="ion-ios-calendar" page="html/ore.html"></ons-tab>
+                            <ons-tab hidden label="Calendario" page="html/calendario.html"></ons-tab>
                             <ons-tab label="Busta Paga" icon="ion-ios-cash" page="/html/busta.html"></ons-tab>
-                            <ons-tab hidden label="Contributi" page="/html/contributi.html"></ons-tab>
-                            <ons-tab hidden label="Impostazioni" page="/html/settings.html"></ons-tab>
+                            <ons-tab hidden label="Contributi" page="html/contributi.html"></ons-tab>
+                            <ons-tab hidden label="Impostazioni" page="html/settings.html"></ons-tab>
                         </ons-tabbar>
                     </ons-page>
 
@@ -200,7 +200,7 @@
 
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            navigator.serviceWorker.register('service-worker.js')
                 .then(() => console.log('Service Worker registrato'))
                 .catch(err => console.error('Errore registrazione SW', err));
         }
@@ -214,22 +214,7 @@
         window.addEventListener('offline', updateStatus);
         updateStatus();
     </script>
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script>
-        // Inizializza Feather quando la pagina è pronta
-        document.addEventListener('init', function (event) {
-            if (feather) {
-                feather.replace();
-            }
-        });
 
-        // Ri-inizializza dopo ogni cambio pagina
-        document.addEventListener('show', function (event) {
-            if (feather) {
-                feather.replace();
-            }
-        });
-    </script>
 </body>
 
 
