--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="mask-icon" href="/assets/maskable_icon.png" color="#2b3e50">
 
     <!-- Manifest PWA -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
     <!-- Apple splash screen support (facoltativo ma utile per installazione PWA) -->
     <link rel="apple-touch-startup-image" href="/assets/maskable_icon_x512.png">
@@ -43,7 +43,6 @@
 
     <title>OK Colf Express</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
     <link rel="stylesheet" href="https://unpkg.com/ionicons@4.6.3/dist/css/ionicons.min.css">
@@ -150,7 +149,7 @@
                             <ons-tab hidden label="Collaboratore" page="html/collaboratore.html"></ons-tab>
                             <ons-tab label="Ore" icon="ion-ios-calendar" page="html/ore.html"></ons-tab>
                             <ons-tab hidden label="Calendario" page="html/calendario.html"></ons-tab>
-                            <ons-tab label="Busta Paga" icon="ion-ios-cash" page="/html/busta.html"></ons-tab>
+                            <ons-tab label="Busta Paga" icon="ion-ios-cash" page="html/busta.html"></ons-tab>
                             <ons-tab hidden label="Contributi" page="html/contributi.html"></ons-tab>
                             <ons-tab hidden label="Impostazioni" page="html/settings.html"></ons-tab>
                         </ons-tabbar>
