fixed error commenting navigator.resetToPAge in init
fixed error commenting navigator.resetToPAge in initApp

the splitter is already loaded and creates issues

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
     <script src="js/services.js" defer></script>
     <script src="js/controllers.js" defer></script>
     <script src="js/app.js" defer></script>
+    <script type="module" src="tests/index.js"></script>
+
 </head>
 
 <body x-data>
