--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
 
 
     <title>OK Colf Express</title>
-    <link rel="stylesheet" href="css/main.css">
+
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
     <link rel="stylesheet" href="https://unpkg.com/ionicons@4.6.3/dist/css/ionicons.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="https://cdn.jsdelivr.net/npm/dexie@3.2.4/dist/dexie.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.15/dist/cdn.min.js" defer></script>
@@ -63,12 +64,12 @@
     <script src="js/services.js" defer></script>
     <script src="js/controllers.js" defer></script>
     <script src="js/app.js" defer></script>
-    <script type="module" src="tests/index.js"></script>
+
 
 </head>
 
 <body x-data>
-    <ons-navigator id="myNavigator" page="splitter.html">
+    <ons-navigator id="myNavigator" page="">
     </ons-navigator>
 
     <template id="splitter.html">
